# pgleaderlock

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SPEC-LIBRARY.md
src/pgleaderlock/: __init__.py  _logging.py  cli.py  errors.py  lock.py  models.py  retry.py
tests/: conftest.py
tests/dry/: conftest.py  test_errors.py  test_lock.py  test_logging.py  test_models.py  test_retry.py
tests/live/: test_live_election.py
