[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgleaderlock"
version = "0.1.0"
description = "Distributed leader election using PostgreSQL session-level advisory locks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
cli = ["click>=8.1", "loguru>=0.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0"]

[project.scripts]
pgleaderlock = "pgleaderlock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pgleaderlock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: integration tests requiring a real PostgreSQL instance",
]

[tool.coverage.run]
source = ["pgleaderlock"]
omit = ["src/pgleaderlock/cli.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
